code rewrite for lcd display

--- a/avr/printr_ctl/platformio.ini
+++ b/avr/printr_ctl/platformio.ini
@@ -22,6 +22,7 @@ platform = atmelavr
 framework = arduino
 board = diecimilaatmega328
 # targets = upload
-#upload_protocol = 
+#upload_protocol =
 upload_port = /dev/ttyAMA0
 #upload_speed = 115200
+lib_install = 75,576
